--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= link_to "Bands", bands_url %>
+<%= link_to "Artists", artists_url %>
+<%= link_to "Singles", singles_url %>
 
 <%= yield %>
 
