--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Artist Name: <%= @artist.name %></h1>
-
+<%= link_to "All Artists", artists_path %>
 <h2>Bands</h2>
 <ol>
   <% @artist.bands.each do |band| %>
