--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -65,18 +65,19 @@
     <%= f.label :state %>
     <%= f.select(:state, @states)%>
   </p>
-    <% Artist.all.each do |artist| %>
+
+  <% Artist.all.each do |artist| %>
     <label>
       <%= check_box_tag(
-            "band[artist_ids][]",
-            artist.id,
-            @band.artist_ids.include?(artist.id)
-          ) %>
+        "band[artist_ids][]",
+        artist.id,
+        @band.artist_ids.include?(artist.id)
+      )%>
       <%= artist.name %>
-    </label>
-      <br>
-    <% end %>
-    <%= hidden_field_tag "band[artist_ids][]"%>
+    </label><br>
+  <% end %>
+
+  <%= hidden_field_tag ("band[artist_ids][]") %>
   <%= f.submit %>
 <% end %>
 
